# msmpi-tester

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  setup  wercker.yml
cmake/: autocmake.cfg
cmake/custom/: readme.rst
src/: CMakeLists.txt
