if(MPI_FOUND)
    add_executable(example example.F90)
    add_executable(example02 example_02.F90)
    if (CMAKE_SYSTEM_NAME MATCHES "Windows")
        # respect paths in appveyor.yml
        target_link_libraries(example   "C:/software/msmpi/libmsmpi64.a")
        target_link_libraries(example02 "C:/software/msmpi/libmsmpi64.a")
    else()
        target_link_libraries(example   ${MPI_LIBRARIES})
        target_link_libraries(example02 ${MPI_LIBRARIES})
    endif()
else()
    message(FATAL_ERROR "MPI not found")
endif()
